--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 HELLO WORLD! Welcome to Tarud-Design. My name is Francisco Tarud, I will be giving you a tour through the best Creative Website in the world. 
-I am a Creative Designer with a broad field of study. I am educated in Advertising, Visual Arts, and Graohic Design. 
-Most people don't realize it is easier to have an all-in-one designer, rather than hiring a couple of people to do the job.
-So welcome to my page, and enjoy the easiest Design experience of your lifes!
+<p> I am a Creative Designer with a broad field of study. I am educated in Advertising, Visual Arts, and Graohic Design. 
+<br> Most people don't realize it is easier to have an all-in-one designer, rather than hiring a couple of people to do the job.
+<br> So welcome to my page, and enjoy the easiest Design experience of your lifes!
