--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 HELLO WORLD! Welcome to Tarud-Design. My name is Francisco Tarud, I will be giving you a tour through the best Creative Website in the world. 
 <p> I am a Creative Designer with a broad field of study. I am educated in Advertising, Visual Arts, and Graohic Design. 
 <br> Most people don't realize it is easier to have an all-in-one designer, rather than hiring a couple of people to do the job.
