--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <body>
     <h1>HELLO WORLD!</h1> 
-<p> Welcome to Tarud-Design. My name is Francisco Tarud, I will be giving you a tour through the best Creative Website in the world. 
-<p> I am a Creative Designer with a broad field of study. I am educated in Advertising, Visual Arts, and Graohic Design. 
-<br> Most people don't realize it is easier to have an all-in-one designer, rather than hiring a couple of people to do the job.
-<br> So welcome to my page, and enjoy the easiest Design experience of your lifes!
+    Welcome to Tarud-Design. My name is Francisco Tarud, I will be giving you a tour through the best Creative Website in the world. 
+    <br> I am a Creative Designer with a broad field of study. I am educated in Advertising, Visual Arts, and Graohic Design.
+    <br> Most people don't realize it is easier to have an all-in-one designer, rather than hiring a couple of people to do the job.
+    <br> So welcome to my page, and enjoy the easiest Design experience of your lifes!
     </body>
 </html>
