--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Tarud Design</title>
+<title>Tarud Design - Unique Creative Experience</title>
 <meta name="viewport" content="width=device-width">
 <meta name="description" content="Tarud Design">
 
