--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 </header>
 
 <section>
-<h1>Welcome!</h1>
-<h3>ABOUT OUR DESIGNER</h3>
 <strong>Name:</strong> Francisco Tarud<br>
 <strong>Birthday:</strong> 3<sup>rd</sup> July<br>
+  <strong>Class:</strong> Fundamentals of Web Design<br>
 </section>
 <br>
 <footer>Tarud-Design © October 2016</footer>
