--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <meta name="description" content="Tarud Design">
 
 <header>
-<img width="200" src="fjtarud.github.io/Tarud Design Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo">
+<img width="250" src="fjtarud.github.io/Tarud Design Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo">
 <br>
 </header>
 <h1>COMING SOON!</h1>
 <section>
 <strong>Name:</strong> Francisco Tarud<br>
-<strong>Birthday:</strong> 3<sup>rd</sup> July<br>
-  <strong>Class:</strong> Fundamentals of Web Design<br>
+<strong>Professor:</strong> R. Gerhard<br>
+<strong>Class:</strong> Fundamentals of Web Design<br>
 </section>
 <br>
 <footer>Tarud-Design © October 2016</footer>
