--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <br>
 </header>
 <section>
-<strong>Name:</strong> Francisco Tarud<br>
-<strong>Professor:</strong> R. Gerhard<br>
+<strong>Student:</strong> Francisco Tarud<br>
 <strong>Class:</strong> Fundamentals of Web Design<br>
+<strong>Professor:</strong> R. Gerhard<br>
 </section>
 <br>
 <footer>Tarud-Design © October 2016</footer>
