--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <meta name="description" content="Tarud Design">
 
 <header>
-<img width="250" src="fjtarud.github.io/Tarud Design Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo">
-<img height="250" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
+<img width="250" src="fjtarud.github.io/Tarud Design Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo"><br>
+<img width="250" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
+</header>
+<section>
 <strong>Student:</strong> Francisco Tarud<br>
 <strong>Class:</strong> Fundamentals of Web Design<br>
 <strong>Professor:</strong> R. Gerhard<br>
-</header>
+</section>
