--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <header>
 <img width="100" src="fjtarud.github.io/Tarud Design Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo">
-<img width="150" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
+<img height="150" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
 </header>
 <section>
 <p>
