--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@
 <strong>Class:</strong> Fundamentals of Web Design<br>
 <strong>Professor:</strong> R. Gerhard<br>
 </section>
-<footer>Be patient, we are creating greatness</footer>
+<footer>Be patient, we are creating greatness!</footer>
