--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta name="description" content="Tarud Design">
 
 <header>
-<img width="100" src="fjtarud.github.io/Tarud Design Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo">
-<img height="100" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
+<img width="250" src="fjtarud.github.io/Tarud Design Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo"><br>
+<img width="250" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
 </header>
 <section>
 <p>
