--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <meta name="description" content="Tarud Design">
 
 <header>
-<img width="250" src="fjtarud.github.io/Tarud Design Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo"><br>
-<img width="250" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
+<img width="250" src="fjtarud.github.io/Tarud Design Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo">
 </header>
 <section>
 <p>
@@ -13,4 +12,5 @@
 <strong>Class:</strong> Fundamentals of Web Design<br>
 <strong>Professor:</strong> R. Gerhard<br>
 </section>
-<footer>Be patient, we are creating greatness!</footer>
+<p>Be patient, we are creating greatness!<br>
+<img width="250" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
