--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <strong>Class:</strong> Fundamentals of Web Design<br>
 <strong>Professor:</strong> R. Gerhard<br>
 </section>
-<p>Be patient, we are creating greatness!<br>
+<hr>
+Be patient, we are creating greatness!<br>
 <img width="250" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
