--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <strong>Class:</strong> Fundamentals of Web Design<br>
 <strong>Professor:</strong> R. Gerhard<br>
 </section>
-<hr width="250">
-BE PATIENT, WE ARE CREATING GREATNESS!
+<hr width="250" alignment="left">
+Be patient, we are creating greatness!
 <br>
 <br>
 <img width="250" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
