--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <meta name="viewport" content="width=device-width">
 <meta name="description" content="Tarud Design">
 
+<link rel="stylesheet" href="https://codeavengers.com/css/profile2.css">
+
 <header>
 <img width="250" src="fjtarud.github.io/Tarud Design Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo">
 </header>
@@ -12,7 +14,7 @@
 <strong>Class:</strong> Fundamentals of Web Design<br>
 <strong>Professor:</strong> R. Gerhard<br>
 </section>
-<hr width="250" alignment="left">
+<p>
 Be patient, we are creating greatness!
 <br>
 <br>
