--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <meta name="viewport" content="width=device-width">
 <meta name="description" content="Tarud Design">
 
-<link rel="stylesheet" href="https://codeavengers.com/css/profile2.css">
+<link rel="stylesheet" href="https://codeavengers.com/css/profile3.css">
 
 <header>
-<img width="250" src="fjtarud.github.io/Tarud Design Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo">
+<img height="250" src="fjtarud.github.io/Tarud Design Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo">
 </header>
 <section>
 <p>
@@ -18,4 +18,4 @@
 Be patient, we are creating greatness!
 <br>
 <br>
-<img width="250" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
+<img width="550" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
