--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <strong>Professor:</strong> R. Gerhard<br>
 </section>
 <p>
-Be patient, we are creating greatness!
 <br>
 <br>
-<img width="550" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
+<img width="640" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
+<footer>Be patient, we are creating greatness!</footer>
