--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
 <section>
 <img width="250" src="fjtarud.github.io/Tarud Design Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo">
+</section>
 <p>
+<section>
 <strong>Student:</strong> Francisco Tarud<br>
 <strong>Class:</strong> Fundamentals of Web Design<br>
 <strong>Professor:</strong> R. Gerhard<br>
@@ -15,5 +17,5 @@
 <p>
 <br>
 <br>
-<img width="640" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
+<img width="700" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
 <footer>Be patient, we are creating greatness!</footer>
