--- a/index.html
+++ b/index.html
@@ -16,4 +16,4 @@
 </section>
 <p>
 <img width="700" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
-<footer>Be patient, we are creating greatness!</footer>
+<footer><strong>BE PATIENT, WE ARE CREATING GREATNESS!</strong></footer>
