--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
 <meta name="description" content="Tarud Design">
 
 <link rel="stylesheet" href="https://codeavengers.com/css/profile3.css">
-
+<section>
 <img width="700" src="fjtarud.github.io/Tarud Design Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo">
-<p>
+</section>
+  <p>
 <section>
 <strong>Student:</strong> Francisco Tarud<br>
 <strong>Class:</strong> Fundamentals of Web Design<br>
 <strong>Professor:</strong> R. Gerhard<br>
 </section>
 <p>
+  <section>
 <img width="700" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
-<footer><strong>BE PATIENT, WE ARE CREATING GREATNESS!</strong></footer>
+</section>
+    <footer><strong>BE PATIENT, WE ARE CREATING GREATNESS!</strong></footer>
