--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <title>Tarud Design - Unique Creative Experience</title>
-<meta name="viewport" content="width=700">
+<meta name="viewport" content="width=device-width">
 <meta name="description" content="Tarud Design">
 
 <link rel="stylesheet" href="https://codeavengers.com/css/profile3.css">
 <section>
-<img width="700" src="fjtarud.github.io/Tarud Design Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo">
+<img width="680" src="fjtarud.github.io/Tarud Design Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo">
 </section>
   <hr>
 <section>
@@ -15,5 +15,5 @@
 </section>
 <p>
 <hr>
-<img width="700" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
+<img width="680" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
 <footer><strong>BE PATIENT, WE ARE CREATING GREATNESS!</strong></footer>
