--- a/index.html
+++ b/index.html
@@ -16,4 +16,8 @@
 <p>
 <hr>
 <img width="690" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction">
+<br>
+<h2>Meanwhile, enjoy these pics...</h2>
+<br>
+<img width="690" src="https://media.ford.com/content/fordmedia/fna/us/en/news/2016/02/03/2017-ford-f-150-raptor-prepares-for-grueling-off-road-racing-series.img.png/1454512305941.jpg" title="Under Construction">
 <footer><strong>BE PATIENT, WE ARE CREATING GREATNESS!</strong></footer>
