--- a/index.html
+++ b/index.html
@@ -20,4 +20,6 @@
 <h2>Meanwhile, enjoy these pics...</h2>
 <br>
 <img width="690" src="https://media.ford.com/content/fordmedia/fna/us/en/news/2016/02/03/2017-ford-f-150-raptor-prepares-for-grueling-off-road-racing-series.img.png/1454512305941.jpg" title="Under Construction">
+<br>
+<img width="690" src="http://cdn.pinthiscars.com/images/hummer-h1-alpha-slantback-wallpaper-3.jpg" title="Under Construction">
 <footer><strong>BE PATIENT, WE ARE CREATING GREATNESS!</strong></footer>
