--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-doctype html>
+<!doctype html>
 <title>Tarud Design - Unique Creative Experience</title>
 <meta name="viewport" content="width=700">
 <meta name="description" content="Tarud Design">
