--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta name="description" content="Tarud Design">
 
 <link rel="stylesheet" href="https://codeavengers.com/css/profile3.css">
+<header></header>
+<main>
 <section>
 <img width="700" src="fjtarud.github.io/Tarud%20Design%20Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo">
 </section>
@@ -15,11 +17,11 @@
 </section>
 <p>
 <hr>
-<img width="690" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction" alt=“Under Construction“>
-<br>
-<h2>Meanwhile, enjoy these pics...</h2>
-<br>
-<img width="690" src="https://media.ford.com/content/fordmedia/fna/us/en/news/2016/02/03/2017-ford-f-150-raptor-prepares-for-grueling-off-road-racing-series.img.png/1454512305941.jpg" title="Under Construction" alt=“Under Construction“>>
-<br>
+<img width="690" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction" alt=“Under Construction“><br>
+<h2>Meanwhile, enjoy these pics...</h2><br>
+<img width="690" src="https://media.ford.com/content/fordmedia/fna/us/en/news/2016/02/03/2017-ford-f-150-raptor-prepares-for-grueling-off-road-racing-series.img.png/1454512305941.jpg" title="Under Construction" alt=“Under Construction“>><br>
 <img width="690" src="http://cdn.pinthiscars.com/images/hummer-h1-alpha-slantback-wallpaper-3.jpg" title="Under Construction" alt=“Under Construction“>>
-<footer><strong>BE PATIENT, WE ARE CREATING GREATNESS!</strong></footer>
+</main>
+<footer>
+<strong>BE PATIENT, WE ARE CREATING GREATNESS!</strong>
+</footer>
