--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <meta name="description" content="Tarud Design">
 
 <link rel="stylesheet" href="https://codeavengers.com/css/profile3.css">
-<header></header>
-<main>
+<header>
+
 <section>
 <img width="700" src="fjtarud.github.io/Tarud%20Design%20Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo">
 </section>
-  <hr>
+  </header>
+<main>
+<hr>
 <section>
 <strong>Student:</strong> Francisco Tarud<br>
 <strong>Class:</strong> Fundamentals of Web Design<br>
