--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
 <meta name="description" content="Tarud Design">
 
 <link rel="stylesheet" href="https://codeavengers.com/css/profile3.css">
-<header>
-
+<header></header>
+<main>
 <section>
 <img width="700" src="fjtarud.github.io/Tarud%20Design%20Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo">
 </section>
-  </header>
-<main>
-<hr>
+  <hr>
 <section>
 <strong>Student:</strong> Francisco Tarud<br>
 <strong>Class:</strong> Fundamentals of Web Design<br>
@@ -21,7 +19,9 @@
 <hr>
 <img width="690" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction" alt=“Under Construction“><br>
 <h2>Meanwhile, enjoy these pics...</h2><br>
+<h5>Ford Raptor 2017</h5><br>
 <img width="690" src="https://media.ford.com/content/fordmedia/fna/us/en/news/2016/02/03/2017-ford-f-150-raptor-prepares-for-grueling-off-road-racing-series.img.png/1454512305941.jpg" title="Under Construction" alt=“Under Construction“>><br>
+<h5>Hummer H1 1999</h5><br>
 <img width="690" src="http://cdn.pinthiscars.com/images/hummer-h1-alpha-slantback-wallpaper-3.jpg" title="Under Construction" alt=“Under Construction“>>
 </main>
 <footer>
