--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <meta name="description" content="Tarud Design">
 
 <link rel="stylesheet" href="https://codeavengers.com/css/profile3.css">
-<header></header>
+<header>
 <main>
 <section>
 <img width="700" src="fjtarud.github.io/Tarud%20Design%20Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo">
 </section>
   <hr>
-<section>
+<subheader>
 <strong>Student:</strong> Francisco Tarud<br>
 <strong>Class:</strong> Fundamentals of Web Design<br>
 <strong>Professor:</strong> R. Gerhard<br>
-</section>
+</subheader>
 <p>
 <hr>
 <img width="690" src="https://openclipart.org/image/2400px/svg_to_png/231626/underconstruction.png" title="Under Construction" alt=“Under Construction“><br>
