--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="description" content="Tarud Design">
 
 <link rel="stylesheet" href="https://codeavengers.com/css/profile3.css">
-<header>
+<header></header>
 <main>
 <section>
 <img width="700" src="fjtarud.github.io/Tarud%20Design%20Logo.jpg" alt="Tarud Design Logo" title="Tarud Design Logo">
