--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <link rel="stylesheet" href="https://codeavengers.com/css/profile3.css">
 <header>
-  <h1>Welcome to Tarud - Design</h1>
+  <h1>Welcome to Tarud Design</h1>
 </header>
 <main>
   <section>
