--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=700">
 <meta name="description" content="Tarud Design">
 
+<link rel="stylesheet" type="text/css" href="http//www.seriouswheels.com/css/gallery-template.css" />
 
 <header>
   <h1>Welcome to Tarud Design</h1>
