--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
 <!doctype html>
+<title>Tarud Design - Unique Creative Experience</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
 
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300,100">
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,400italic,300italic,300,500,500italic,700,900">
