--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         Artcore Template
 		http://www.templatemo.com/preview/templatemo_423_artcore
         -->
-        <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="fjtarud.github.io/bootstrap.css">
         <link rel="stylesheet" href="css/font-awesome.css">
         <link rel="stylesheet" href="css/animate.css">
         <link rel="stylesheet" href="css/templatemo-misc.css">
