--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		http://www.templatemo.com/preview/templatemo_423_artcore
         -->
         <link rel="stylesheet" href="fjtarud.github.io/bootstrap.css">
-        <link rel="stylesheet" href="css/font-awesome.css">
-        <link rel="stylesheet" href="css/animate.css">
-        <link rel="stylesheet" href="css/templatemo-misc.css">
-        <link rel="stylesheet" href="css/templatemo-style.css">
+        <link rel="stylesheet" href="fjtarud.github.io/font-awesome.css">
+        <link rel="stylesheet" href="fjtarud.github.io/animate.css">
+        <link rel="stylesheet" href="fjtarud.github.io/templatemo-misc.css">
+        <link rel="stylesheet" href="fjtarud.github.io/templatemo-style.css">
         <script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
