--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <title>Tarud Design - Unique Creative Experience</title>
-        <meta name="description" content="">
+        <meta name="description" content="Tarud Design offers a unique creative experience">
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300,100">
