--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
-<title>Tarud Design - Unique Creative Experience</title>
-        <meta name="description" content="Tarud Design offers a unique creative experience">
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+   	<head>
+        <meta charset="utf-8">
+	<title>Tarud Design - Unique Creative Experience</title>
+	<meta name="description" content="Tarud Design offers a unique creative experience">
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300,100">
@@ -14,4 +20,5 @@
         <link rel="stylesheet" href="fjtarud.github.io/animate.css">
         <link rel="stylesheet" href="fjtarud.github.io/templatemo-misc.css">
         <link rel="stylesheet" href="fjtarud.github.io/templatemo-style.css">
-        <script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
+	<script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
+	</head>
