--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="swiper-container">
             <div class="swiper-wrapper">
 
-                <div class="swiper-slide" style="background-image: url(images/slide1.jpg);">
+                <div class="swiper-slide" style="background-image: fjtarud.github.io/slide1.jpg;">
                     <div class="overlay-s"></div>
                     <div class="slider-caption">
                         <div class="inner-content">
