--- a/index.html
+++ b/index.html
@@ -18,3 +18,4 @@
         <link rel="stylesheet" href="fjtarud.github.io/templatemo-style.css">
 	<script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
 	</head>
+<h1>Tarud Design</h1>
