--- a/index.html
+++ b/index.html
@@ -1,21 +1,3 @@
 <!doctype html>
-   	<head>
-        <meta charset="utf-8">
-	<title>Tarud Design - Unique Creative Experience</title>
-	<meta name="description" content="Tarud Design offers a unique creative experience">
-        <meta name="viewport" content="width=device-width">
-
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300,100">
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,400italic,300italic,300,500,500italic,700,900">
- <!--
-        Artcore Template
-		http://www.templatemo.com/preview/templatemo_423_artcore
-        -->
-        <link rel="stylesheet" href="fjtarud.github.io/bootstrap.css">
-        <link rel="stylesheet" href="fjtarud.github.io/font-awesome.css">
-        <link rel="stylesheet" href="fjtarud.github.io/animate.css">
-        <link rel="stylesheet" href="fjtarud.github.io/templatemo-misc.css">
-        <link rel="stylesheet" href="fjtarud.github.io/templatemo-style.css">
-	<script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
-	</head>
 <h1>Tarud Design</h1>
+<h2>Welcome!</h2>
