--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>Artcore - Responsive HTML5 Template</title>
-        <meta name="description" content="">
+        <title>Tarud Design - Unique Creative Experience</title>
+        <meta name="description" content="Tarud Design - Unique Creative Experience">
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300,100">
