--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <header class="site-header container-fluid">
             <div class="top-header">
                 <div class="logo col-md-6 col-sm-6">
-                    <h1><a href="index.html"><em>Art</em>Core</a></h1>
+                    <h1><a href="fjtarud.github.io/Tarud Design Logo.jpg" width="250"></a></h1>
                     <span>Responsive HTML5 Template</span>
                 </div> <!-- /.logo -->
                 <div class="social-top col-md-6 col-sm-6">
