--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!doctype html>
-<img src="fjtarud.github.io/Tarud Design Logo.jpg" style="width:300" alt="Tarud Design Logo">
+<img src="fjtarud.github.io/Tarud Design Logo.jpg" width="300" alt="Tarud Design Logo">
