--- a/index.html
+++ b/index.html
@@ -26,37 +26,21 @@
     <a class="w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
   </li>
   <li><a href="#" class="w3-teal"><i class="fa fa-home w3-margin-right"></i>Logo</a></li>
-  <li class="w3-hide-small"><a href="#team" class="w3-hover-white">Team</a></li>
+  <li class="w3-hide-small"><a href="#team" class="w3-hover-white">About</a></li>
   <li class="w3-hide-small"><a href="#work" class="w3-hover-white">Work</a></li>
-  <li class="w3-hide-small"><a href="#pricing" class="w3-hover-white">Price</a></li>
+  <li class="w3-hide-small"><a href="#pricing" class="w3-hover-white">Services</a></li>
   <li class="w3-hide-small"><a href="#contact" class="w3-hover-white">Contact</a></li>
-  <li class="w3-hide-small w3-dropdown-hover">
-    <a href="javascript:void(0);" title="Notifications">Dropdown <i class="fa fa-caret-down"></i></a>
-    <div class="w3-dropdown-content w3-white w3-card-4">
-      <a href="#">Link</a>
-      <a href="#">Link</a>
-      <a href="#">Link</a>
-    </div>
-  </li>
   <li class="w3-hide-small w3-right"><a href="#" class="w3-hover-teal" title="Search"><i class="fa fa-search"></i></a></li>
  </ul>
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium">
     <ul class="w3-navbar w3-left-align w3-theme">
-      <li><a href="#team">Team</a></li>
+      <li><a href="#team">About</a></li>
       <li><a href="#work">Work</a></li>
-      <li><a href="#pricing">Price</a></li>
+      <li><a href="#pricing">Services</a></li>
       <li><a href="#contact">Contact</a></li>
       <li><a href="#">Search</a></li>
-      <li class="w3-dropdown-hover">
-      <a href="javascript:void(0);" title="Notifications">Dropdown <i class="fa fa-caret-down"></i></a>
-      <div class="w3-dropdown-content w3-light-grey w3-card-4">
-        <a href="#">Link</a>
-        <a href="#">Link</a>
-        <a href="#">Link</a>
-      </div>
-      </li>
     </ul>
   </div>
 </div>
