--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
     <a class="w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
   </li>
-  <li><a href="#" class="w3-teal"><i class="fa fa-home w3-margin-right"></i><img src="fjtarud.github.io/Tarud_Design_Side_Logo.pdf" height="100px" alt="Tarud Design Logo"></a></li>
+  <li><a href="#" class="w3-teal"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.pdf" height="50px" alt="Tarud Design Logo"><i class="fa fa-home w3-margin-right"></i></a></li>
   <li class="w3-hide-small"><a href="#team" class="w3-hover-white">About</a></li>
   <li class="w3-hide-small"><a href="#work" class="w3-hover-white">Work</a></li>
   <li class="w3-hide-small"><a href="#pricing" class="w3-hover-white">Services</a></li>
