--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <a class="w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
   </li>
   <li><a href="#" class="w3-black"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.pdf" height="50px" alt="Tarud Design Logo"></a></li>
-  <li class="w3-hide-medium"><a href="#team" class="w3-hover-black">About</a></li>
-  <li class="w3-hide-medium"><a href="#work" class="w3-hover-black">Work</a></li>
-  <li class="w3-hide-medium"><a href="#pricing" class="w3-hover-black">Services</a></li>
-  <li class="w3-hide-medium"><a href="#contact" class="w3-hover-black">Contact</a></li>
-  <li class="w3-hide-medium w3-right"><a href="#" class="w3-hover-black" title="Search"><i class="fa fa-search"></i></a></li>
+  <li class="w3-hide-small"><a href="#team" class="w3-hover-white">About</a></li>
+  <li class="w3-hide-small"><a href="#work" class="w3-hover-white">Work</a></li>
+  <li class="w3-hide-small"><a href="#pricing" class="w3-hover-white">Services</a></li>
+  <li class="w3-hide-small"><a href="#contact" class="w3-hover-white">Contact</a></li>
+  <li class="w3-hide-small w3-right"><a href="#" class="w3-hover-white" title="Search"><i class="fa fa-search"></i></a></li>
  </ul>
 
   <!-- Navbar on small screens -->
