--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
   <li class="w3-hide-small"><a href="#work" class="w3-hover-white">Work</a></li>
   <li class="w3-hide-small"><a href="#pricing" class="w3-hover-white">Services</a></li>
   <li class="w3-hide-small"><a href="#contact" class="w3-hover-white">Contact</a></li>
-  <li class="w3-hide-small w3-right"><a href="#" class="w3-hover-white" title="Search"><i class="fa fa-search"></i></a></li>
  </ul>
 
   <!-- Navbar on small screens -->
@@ -40,7 +39,6 @@
       <li><a href="#work">Work</a></li>
       <li><a href="#pricing">Services</a></li>
       <li><a href="#contact">Contact</a></li>
-      <li><a href="#">Search</a></li>
     </ul>
   </div>
 </div>
@@ -53,8 +51,8 @@
 
 <!-- Team Container -->
 <div class="w3-container w3-padding-64 w3-center" id="team">
-<h2>OUR TEAM</h2>
-<p>Meet the team - our office rats:</p>
+<h2>OUR DESIGNER</h2>
+<p>A closer look at our Creative Genious</p>
 
 <div class="w3-row"><br>
 
@@ -62,24 +60,6 @@
   <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Johnny Walker</h3>
   <p>Web Designer</p>
-</div>
-
-<div class="w3-quarter">
-  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-  <h3>Rebecca Flex</h3>
-  <p>Support</p>
-</div>
-
-<div class="w3-quarter">
-  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-  <h3>Jan Ringo</h3>
-  <p>Boss man</p>
-</div>
-
-<div class="w3-quarter">
-  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-  <h3>Kai Ringo</h3>
-  <p>Fixer</p>
 </div>
 
 </div>
