--- a/index.html
+++ b/index.html
@@ -57,9 +57,12 @@
 <div class="w3-row"><br>
 
 <div class="w3-quarter">
-  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-  <h3>Johnny Walker</h3>
+  <img src="fjtarud.github.io/IMG_6521.JPG" alt="Francisco Tarud" style="width:50%" class="w3-circle w3-hover-opacity">
+  <h3>Francisco Tarud</h3>
+  <p>Advertiser</p>
+  <p>Graphic Designer</p>
   <p>Web Designer</p>
+  <p>Photographer</p>
 </div>
 
 </div>
