--- a/index.html
+++ b/index.html
@@ -52,11 +52,10 @@
 <!-- Team Container -->
 <div class="w3-container w3-padding-64 w3-center" id="team">
 <h2>OUR DESIGNER</h2>
-<p>A closer look at our Creative Genious</p>
+<p>A closer look at our Creative Genius</p>
 
 <div class="w3-row"><br>
 
-<div class="w3-quarter">
   <img src="fjtarud.github.io/IMG_6521.JPG" alt="Francisco Tarud" style="width:50%" class="w3-circle w3-hover-opacity">
   <h3>Francisco Tarud</h3>
   <p>Advertiser</p>
@@ -65,7 +64,6 @@
   <p>Photographer</p>
 </div>
 
-</div>
 </div>
 
 <!-- Work Row -->
