--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <div class="w3-row"><br>
 
-  <img src="fjtarud.github.io/IMG_6521.JPG" alt="Francisco Tarud" style="width:20%" class="w3-circle w3-hover-opacity">
+  <img src="fjtarud.github.io/IMG_6521.JPG" alt="Francisco Tarud" style="min-height:200px;max-height:400px;" class="w3-circle w3-hover-opacity">
   <h2>Francisco Tarud</h2>
   <h4>Advertiser</h4>
   <p>One of the most important skills and advertiser can possess is the ability to easily relate to and communicate with other people. Francisco has outstanding interpersonal skills and ability to create strong lasting relationships. He also has the ability to be self-motivated, organized and persistent.</p>
