--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <img src="fjtarud.github.io/IMG_6521.JPG" alt="Francisco Tarud" style="min-height:100px;max-height:300px;" class="w3-circle w3-hover-opacity">
   <h2>Francisco Tarud</h2>
   <h4>Advertiser</h4>
-  <p>One of the most important skills and advertiser can possess is the ability to easily relate to and communicate with other people. Francisco has outstanding interpersonal skills and ability to create strong lasting relationships. He also has the ability to be self-motivated, organized and persistent.</p>
+  <p>One of the most important skills an advertiser can possess is the ability to easily relate to and communicate with other people. Francisco has outstanding interpersonal skills and ability to create strong lasting relationships. He also has the ability to be self-motivated, organized and persistent.</p>
   <h4>Graphic Designer</h4>
   <p>Our Graphic Designer has strong writing, presentation, interpersonal and creative skills. Since creative professionals often work with marketing, advertising and other departments, it is essential that he collaborates well with different roles and levels within his organization. Francisco is very analytical and capable of solving complex issues using artistic concepts and solutions. Other skills include prioritizing and managing different tasks, and supervising and training junior-level graphic designers.</p>
   <h4>Web Designer</h4>
