--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 
 <!-- Team Container -->
 <div class="w3-container w3-padding-64 w3-center" id="team">
-<h2>OUR DESIGNER</h2>
-<p>A closer look at our Creative Genius</p>
+<h2>OUR CREATIVE</h2>
 
 <div class="w3-row"><br>
 
@@ -63,7 +62,9 @@
   <h4>Graphic Designer</h4>
   <p>Our Graphic Designer has strong writing, presentation, interpersonal and creative skills. Since creative professionals often work with marketing, advertising and other departments, it is essential that he collaborates well with different roles and levels within his organization. Francisco is very analytical and capable of solving complex issues using artistic concepts and solutions. Other skills include prioritizing and managing different tasks, and supervising and training junior-level graphic designers.</p>
   <h4>Web Designer</h4>
+  <p>Our Web Designer knows the standard differences in style and function between sites for different purposes, such as business, personal, entertainment and information. Francisco is also able to design using code as well as coding programs. Common codes include HTML, XHTML, Javascript and PHP. He is not just a programmer, but an artist who creates visually appealing sites. In addition to building web sites, he is often responsible for maintaining and updating them.</p>
   <h4>Photographer</h4>
+  <p>Our Photographer has excellent creative abilities, as well as good eyesight and the ability to translate the images he sees with his eyes to one captured by the camera. Francisco is not just good with a camera, but also has in-depth knowledge about lighting conditions. Often working outdoors, and scheduling the right time to take a photo so it presents the subject in the best light. Sometimes working with assistants and models, Francisco is able to communicate effectively to capture the proper images.</p>
 </div>
 
 </div>
