--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <!-- Team Container -->
 <div class="w3-container w3-padding-64 w3-center" id="team">
-<h2>OUR CREATIVE</h2>
+<h2>OUR CREATIVE: FRANCISCO TARUD</h2>
 
 <div class="w3-row"><br>
 
