--- a/index.html
+++ b/index.html
@@ -51,12 +51,11 @@
 
 <!-- Team Container -->
 <div class="w3-container w3-padding-64 w3-center" id="team">
-<h2>OUR CREATIVE: FRANCISCO TARUD</h2>
+<h2>MEET FRANCISCO TARUD</h2>
 
 <div class="w3-row"><br>
 
   <img src="fjtarud.github.io/IMG_6521.JPG" alt="Francisco Tarud" style="min-height:100px;max-height:300px;" class="w3-circle w3-hover-opacity">
-  <h2>Francisco Tarud</h2>
   <h4>Advertiser</h4>
   <p>One of the most important skills an advertiser can possess is the ability to easily relate to and communicate with other people. Francisco has outstanding interpersonal skills and ability to create strong lasting relationships. He also has the ability to be self-motivated, organized and persistent.</p>
   <h4>Graphic Designer</h4>
