--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
   </li>
   <li><a href="#" class="w3-black"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.pdf" height="25px" alt="Tarud Design Logo"></a></li>
   <li class="w3-hide-small"><a href="#team" class="w3-hover-white">About</a></li>
-  <li class="w3-hide-small"><a href="#work" class="w3-hover-white">Work</a></li>
   <li class="w3-hide-small"><a href="#pricing" class="w3-hover-white">Services</a></li>
   <li class="w3-hide-small"><a href="#contact" class="w3-hover-white">Contact</a></li>
  </ul>
@@ -36,7 +35,6 @@
   <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium">
     <ul class="w3-navbar w3-left-align w3-theme">
       <li><a href="#team">About</a></li>
-      <li><a href="#work">Work</a></li>
       <li><a href="#pricing">Services</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
@@ -72,68 +70,10 @@
 
 </div>
 
-<!-- Work Row -->
-<div class="w3-row-padding w3-padding-64 w3-theme-l1" id="work">
-
-<div class="w3-quarter">
-<h2>Our Work</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-</div>
-
-<div class="w3-quarter">
-<div class="w3-card-2 w3-white">
-  <img src="/w3images/fjords.jpg" alt="Vernazza" style="width:100%">
-  <div class="w3-container">
-  <h3>Customer 1</h3>
-  <h4>Trade</h4>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  </div>
-  </div>
-</div>
-
-<div class="w3-quarter">
-<div class="w3-card-2 w3-white">
-  <img src="/w3images/lights.jpg" alt="Cinque Terre" style="width:100%">
-  <div class="w3-container">
-  <h3>Customer 2</h3>
-  <h4>Trade</h4>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  </div>
-  </div>
-</div>
-
-<div class="w3-quarter">
-<div class="w3-card-2 w3-white">
-  <img src="/w3images/mountains.jpg" alt="Monterosso" style="width:100%">
-  <div class="w3-container">
-  <h3>Customer 3</h3>
-  <h4>Trade</h4>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  </div>
-  </div>
-</div>
-
-</div>
-
-<!-- Container -->
-<div class="w3-container" style="position:relative">
-  <a onclick="w3_open()" class="w3-btn-floating-large w3-teal" style="position:absolute;top:-28px;right:24px;z-index:0;">
-  <i class="fa fa-plus"></i></a>
-</div>
-
 <!-- Pricing Row -->
 <div class="w3-row-padding w3-center w3-padding-64" id="pricing">
-    <h2>PRICING</h2>
-    <p>Choose a pricing plan that fits your needs.</p><br>
+    <h2>SERVICES</h2>
+    <p>Choose a package that fits your needs.</p><br>
     <div class="w3-third w3-margin-bottom">
       <ul class="w3-ul w3-border w3-hover-shadow">
         <li class="w3-theme">
