--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </div>
 
 <!-- Pricing Row -->
-<div class="w3-row-padding w3-center w3-padding-64" id="pricing">
+<div class="w3-row-padding w3-padding-64 w3-theme-l1" id="pricing">
     <h2>SERVICES</h2>
     <p>Choose a package that fits your needs.</p><br>
     <div class="w3-third w3-margin-bottom">
