--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <!-- Team Container -->
 <div class="w3-container w3-padding-64 w3-center" id="team">
-<h2>MEET FRANCISCO TARUD</h2>
+<h1>MEET FRANCISCO TARUD</h1>
 
 <div class="w3-row"><br>
 
@@ -73,65 +73,92 @@
   
 <!-- Pricing Row -->
 <div class="w3-row-padding w3-center w3-padding-64" id="pricing">
-    <h2>SERVICES</h2>
-    <p>Choose a package that fits your needs.</p><br>
-    <div class="w3-third w3-margin-bottom">
+    <h1>PACKAGES</h1>
+    <p>Choose a package that fits your business needs.</p><br>
+    <div class="w3-quarter w3-margin-bottom">
       <ul class="w3-ul w3-border w3-hover-shadow">
         <li class="w3-theme">
-          <p class="w3-xlarge">Basic</p>
+          <p class="w3-xlarge">BASIC</p>
         </li>
-        <li class="w3-padding-16"><b>10GB</b> Storage</li>
-        <li class="w3-padding-16"><b>10</b> Emails</li>
-        <li class="w3-padding-16"><b>10</b> Domains</li>
-        <li class="w3-padding-16"><b>Endless</b> Support</li>
+        <li class="w3-padding-16">Logo Design</li>
+        <li class="w3-padding-16">Business Card Design</li>
+        <li class="w3-padding-16">Envelope Design</li>
+        <li class="w3-padding-16">Letterhead Design</li>
+        <li class="w3-padding-16"><br></li>
+        <li class="w3-padding-16"><br></li>
+        <li class="w3-padding-16"><br><br></li>
+        <li class="w3-padding-16"><br><br></li>
+        <li class="w3-padding-16"><br><br></li>
+        <li class="w3-padding-16"><br></li>
+        <li class="w3-padding-16"><b>1 Revision</b></li>
         <li class="w3-padding-16">
-          <h2 class="w3-wide"><i class="fa fa-usd"></i> 10</h2>
-          <span class="w3-opacity">per month</span>
+          <h1 class="w3-wide"><i class="fa fa-usd"></i> 400</h1>
+      </ul>
+    </div>
+
+    <div class="w3-quarter w3-margin-bottom">
+      <ul class="w3-ul w3-border w3-hover-shadow">
+        <li class="w3-theme">
+          <p class="w3-xlarge">PRO</p>
         </li>
-        <li class="w3-theme-l5 w3-padding-24">
-          <button class="w3-btn w3-teal w3-padding-large"><i class="fa fa-check"></i> Sign Up</button>
+        <li class="w3-padding-16">Logo Design</li>
+        <li class="w3-padding-16">Business Card Design</li>
+        <li class="w3-padding-16">Envelope Design</li>
+        <li class="w3-padding-16">Letterhead Design</li>
+        <li class="w3-padding-16">Brochure Design</li>
+        <li class="w3-padding-16">Flyer Design</li>
+        <li class="w3-padding-16">Website Design <br>(3 Pages)</li>
+        <li class="w3-padding-16"><br><br></li>
+        <li class="w3-padding-16"><br><br></li>
+        <li class="w3-padding-16"><br></li>
+        <li class="w3-padding-16"><b>5 Revisions</b></li>
+        <li class="w3-padding-16">
+          <h1 class="w3-wide"><i class="fa fa-usd"></i> 600</h1>
         </li>
       </ul>
     </div>
 
-    <div class="w3-third w3-margin-bottom">
+    <div class="w3-quarter w3-margin-bottom">
       <ul class="w3-ul w3-border w3-hover-shadow">
-        <li class="w3-theme-l2">
-          <p class="w3-xlarge">Pro</p>
+        <li class="w3-theme">
+          <p class="w3-xlarge">PREMIUM</p>
         </li>
-        <li class="w3-padding-16"><b>25GB</b> Storage</li>
-        <li class="w3-padding-16"><b>25</b> Emails</li>
-        <li class="w3-padding-16"><b>25</b> Domains</li>
-        <li class="w3-padding-16"><b>Endless</b> Support</li>
+        <li class="w3-padding-16">Logo Design</li>
+        <li class="w3-padding-16">Business Card Design</li>
+        <li class="w3-padding-16">Envelope Design</li>
+        <li class="w3-padding-16">Letterhead Design</li>
+        <li class="w3-padding-16">Brochure Design</li>
+        <li class="w3-padding-16">Flyer Design</li>
+        <li class="w3-padding-16">Website Design <br>(10 Pages)</li>
+        <li class="w3-padding-16">Domain & Hosting <br>(1 Year)</li>
+        <li class="w3-padding-16">Email Service <br>(10 Accounts)</li>
+        <li class="w3-padding-16">Email Signature</li>
+        <li class="w3-padding-16"><b>10 Revisions</b></li>
         <li class="w3-padding-16">
-          <h2 class="w3-wide"><i class="fa fa-usd"></i> 25</h2>
-          <span class="w3-opacity">per month</span>
-        </li>
-        <li class="w3-theme-l5 w3-padding-24">
-          <button class="w3-btn w3-teal w3-padding-large"><i class="fa fa-check"></i> Sign Up</button>
-        </li>
+          <h1 class="w3-wide"><i class="fa fa-usd"></i> 1,000</h1>
       </ul>
     </div>
 
-    <div class="w3-third w3-margin-bottom">
+<div class="w3-quarter w3-margin-bottom">
       <ul class="w3-ul w3-border w3-hover-shadow">
         <li class="w3-theme">
-          <p class="w3-xlarge">Premium</p>
+          <p class="w3-xlarge">ULTIMATE</p>
         </li>
-        <li class="w3-padding-16"><b>50GB</b> Storage</li>
-        <li class="w3-padding-16"><b>50</b> Emails</li>
-        <li class="w3-padding-16"><b>50</b> Domains</li>
-        <li class="w3-padding-16"><b>Endless</b> Support</li>
+        <li class="w3-padding-16">Logo Design</li>
+        <li class="w3-padding-16">Business Card Design</li>
+        <li class="w3-padding-16">Envelope Design</li>
+        <li class="w3-padding-16">Letterhead Design</li>
+        <li class="w3-padding-16">Brochure Design</li>
+        <li class="w3-padding-16">Flyer Design</li>
+        <li class="w3-padding-16">Website Design <br>(20 Pages)</li>
+        <li class="w3-padding-16">Domain & Hosting <br>(2 Years)</li>
+        <li class="w3-padding-16">Email Service <br>(20 Accounts)</li>
+        <li class="w3-padding-16">Email Signature</li>
+        <li class="w3-padding-16"><b>Unlimited Revisions</b></li>
         <li class="w3-padding-16">
-          <h2 class="w3-wide"><i class="fa fa-usd"></i> 50</h2>
-          <span class="w3-opacity">per month</span>
-        </li>
-        <li class="w3-theme-l5 w3-padding-24">
-          <button class="w3-btn w3-teal w3-padding-large"><i class="fa fa-check"></i> Sign Up</button>
-        </li>
+          <h1 class="w3-wide"><i class="fa fa-usd"></i> 2,000</h1>
       </ul>
     </div>
-</div>
 
 <!-- Contact Container -->
 <div class="w3-container w3-padding-64 w3-theme-l5" id="contact">
