--- a/index.html
+++ b/index.html
@@ -164,29 +164,27 @@
 <div class="w3-container w3-padding-64 w3-theme-l5" id="contact">
   <div class="w3-row">
     <div class="w3-col m5">
-    <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Contact Us</span></div>
-      <h3>Address</h3>
-      <p>Swing by for a cup of coffee, or whatever.</p>
-      <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i>  Chicago, US</p>
-      <p><i class="fa fa-phone w3-text-teal w3-xlarge"></i>  +00 1515151515</p>
-      <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  test@test.com</p>
+    <div class="w3-padding-16"><span class="w3-xlarge w3-border-red w3-bottombar">CONTACT US</span></div><br>
+      <p><i class="fa fa-map-marker w3-text-red w3-xlarge"></i>  3705 NW 115<sup>TH</sup> Ave. Miami, FL  33178</p>
+      <p><i class="fa fa-phone w3-text-red w3-xlarge"></i>  +1 (305) 934-9550</p>
+      <p><i class="fa fa-envelope-o w3-text-red w3-xlarge"></i>  fjtarud@tarud-design.com</p>
     </div>
     <div class="w3-col m7">
       <form class="w3-container w3-card-4 w3-padding-16 w3-white">
       <div class="w3-group">
-        <label class="w3-label">Name</label>
+        <label class="w3-label-red">Name</label>
         <input class="w3-input" type="text">
       </div>
       <div class="w3-group">
-        <label class="w3-label">Email</label>
+        <label class="w3-label-red">Email</label>
         <input class="w3-input" type="text">
       </div>
-      <div class="w3-group">
-        <label class="w3-label">Subject</label>
+  <div class="w3-group">
+        <label class="w3-label-red">Message</label>
         <input class="w3-input" type="text">
       </div>
-      <input class="w3-check" type="checkbox" checked>
-      <label class="w3-validate">I Like it!</label>
+      <input class="w3-check" type="checkbox" unchecked>
+      <label class="w3-validate">Subscribe to mailing list!</label>
       <button type="button" class="w3-btn w3-right w3-theme">Send</button>
       </form>
     </div>
