--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   <div class="w3-row">
     <div class="w3-col m5">
     <div class="w3-padding-16"><span class="w3-xlarge w3-border-red w3-bottombar">CONTACT US</span></div><br>
-      <p><i class="fa fa-map-marker w3-text-red w3-xlarge"></i>  3705 NW 115<sup>TH</sup> Ave. Miami, FL  33178</p>
+      <p><i class="fa fa-map-marker w3-text-red w3-xlarge w3-left"></i>  3705 NW 115<sup>TH</sup> Ave. Miami, FL  33178</p>
       <p><i class="fa fa-phone w3-text-red w3-xlarge"></i>  +1 (305) 934-9550</p>
       <p><i class="fa fa-envelope-o w3-text-red w3-xlarge"></i>  fjtarud@tarud-design.com</p>
     </div>
