--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <input class="w3-input" type="text">
       </div>
   <div class="w3-group">
-        <label class="w3-label-red">Message</label>
+        <label class="w3-label-red w3-left">Message</label>
         <input class="w3-input" type="text">
       </div>
       <input class="w3-check" type="checkbox" unchecked>
