--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <a class="w3-btn w3-theme" href="#myPage"><span class="w3-xlarge">
     <i class="fa fa-chevron-circle-up"></i></span></a>
   </div>
-  <img src="fjtarud.github.io/Tarud_Design_Side_Logo.pdf" height="50px" alt="Tarud Design Logo">
+  <p><img src="fjtarud.github.io/Tarud_Design_Side_Logo.pdf" height="100px" alt="Tarud Design Logo">
 </footer>
 
 <!-- Script For Side Navigation -->
